force-app/main/default/objects/BrillioFC__Async_Job__c/BrillioFC__Async_Job__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Async Job</label>
    <nameField>
        <label>Async Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Async Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>