force-app/main/default/objects/BrillioFC__Async_Job__c/fields/BrillioFC__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>