force-app/main/default/objects/BrillioFC__Async_Job__c/fields/BrillioFC__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>