force-app/main/default/objects/BrillioFC__Async_Job__c/fields/BrillioFC__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>