force-app/main/default/objects/BrillioFC__Async_Job__c/fields/BrillioFC__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Job_Status__c</fullName>
    <label>Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>