force-app/main/default/objects/BrillioFC__Async_Job__c/fields/BrillioFC__Job_Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Job_Type__c</fullName>
    <label>Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>